--- a/app/src/main/res/layout/item_term.xml
+++ b/app/src/main/res/layout/item_term.xml
@@ -1,28 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root_list_term_item"
-    style="@style/AppTheme"
     android:layout_width="match_parent"
-    android:layout_height="206dp">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
 
     <TextView
         android:id="@+id/term_title"
         style="@style/Text.Title"
         android:layout_width="match_parent"
-        android:layout_height="56dp"
+        android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:text="Term Number"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="Term Number" />
 
-    <ListView
+    <TextView
+        android:id="@+id/term_start_date"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:text="Start Date: Term Start" />
+
+
+    <TextView
+        android:id="@+id/term_end_date"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:text="End Date: Term End" />
+
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/term_course_list"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:gravity="center"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@id/term_title"
-        tools:layout_editor_absoluteX="56dp" />
-</android.support.constraint.ConstraintLayout>
+        style="@style/Text.Item"/>
+
+</LinearLayout>
