--- a/app/src/main/res/layout/activity_term_list.xml
+++ b/app/src/main/res/layout/activity_term_list.xml
@@ -19,10 +19,10 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rec_list_term_activity"
         android:layout_width="274dp"
-        android:layout_height="281dp"
+        android:layout_height="305dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="205dp"  />
+        android:layout_marginBottom="205dp" />
 
     <Button
         android:id="@+id/term_list_add_term_button"
@@ -31,7 +31,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="143dp"
-        android:text="Add Term" />
+        android:text="@string/add_term" />
 
     <Button
         android:id="@+id/term_list_home_button"
@@ -40,7 +40,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="27dp"
-        android:text="Home" />
+        android:text="@string/home" />
 
 
 
