--- a/app/src/main/res/layout/activity_add_new_mentor.xml
+++ b/app/src/main/res/layout/activity_add_new_mentor.xml
@@ -1,9 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/add_mentor_view"
     tools:context=".view.AddNewMentor">
 
-</android.support.constraint.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/add_mentor_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="28dp"
+        style="@style/Text.Title"
+        android:text="@string/add_new_mentor" />
+
+    <EditText
+        android:id="@+id/add_mentor_name_entry"
+        android:layout_width="271dp"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/add_mentor_phone_number_entry"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginStart="57dp"
+        android:layout_marginLeft="57dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:hint="@string/name" />
+
+    <EditText
+        android:id="@+id/add_mentor_phone_number_entry"
+        android:layout_width="270dp"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/add_mentor_email_entry"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginBottom="-229dp"
+        android:layout_marginStart="57dp"
+        android:layout_marginLeft="57dp"
+        android:hint="@string/phone_number"
+        android:ems="10"
+        android:inputType="phone" />
+
+    <EditText
+        android:id="@+id/add_mentor_email_entry"
+        android:layout_width="270dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="57dp"
+        android:layout_marginLeft="57dp"
+        android:layout_marginTop="229dp"
+        android:ems="10"
+        android:hint="@string/email"
+        android:inputType="textEmailAddress" />
+
+
+    <Button
+        android:id="@+id/add_mentor_save_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:text="@string/save" />
+
+</RelativeLayout>
