--- a/app/src/main/res/layout/item_mentor.xml
+++ b/app/src/main/res/layout/item_mentor.xml
@@ -2,14 +2,14 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:id="@+id/mentor_item"
-    android:layout_height="48dp">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/mentor_title"
         style="@style/Text.Item"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:text="Mentor Name" />
+        android:text="@string/mentor_name" />
 
 </android.support.constraint.ConstraintLayout>
