--- a/app/src/main/res/layout/activity_add_new_assessment.xml
+++ b/app/src/main/res/layout/activity_add_new_assessment.xml
@@ -29,12 +29,12 @@
 
     <EditText
         android:id="@+id/add_assessment_due_date_entry"
-        android:clickable="true"
         android:layout_width="270dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/add_assessment_type_group"
+        android:layout_marginBottom="166dp"
+        android:clickable="true"
         android:ems="10"
         android:hint="@string/due_date"
         android:inputType="date" />
