--- a/app/src/main/res/layout/activity_update_assessment.xml
+++ b/app/src/main/res/layout/activity_update_assessment.xml
@@ -1,9 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.UpdateAssessmentActivity">
 
-</android.support.constraint.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/update_assessment_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="28dp"
+        style="@style/Text.Title"
+        android:text="@string/update_assessment" />
+
+    <EditText
+        android:id="@+id/update_assessment_name_entry"
+        android:layout_width="271dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="149dp"
+        android:ems="10"
+        android:hint="@string/assessment_name"
+        android:inputType="text" />
+
+    <EditText
+        android:id="@+id/update_assessment_due_date_entry"
+        android:layout_width="270dp"
+        android:layout_height="59dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="155dp"
+        android:clickable="true"
+        android:ems="10"
+        android:hint="@string/due_date"
+        android:inputType="date" />
+
+
+    <Button
+        android:id="@+id/update_assessment_save_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/update_assessment_delete_button"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:text="@string/save" />
+
+    <Button
+        android:id="@+id/update_assessment_delete_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:text="@string/delete_assessment" />
+
+    <RadioGroup
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:id="@+id/update_assessment_type_group">
+
+        <RadioButton
+            android:id="@+id/update_assessment_pre_assessment_entry"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/pre_assessment" />
+
+        <RadioButton
+            android:id="@+id/update_assessment_objective_assessment_entry"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/objective_assessment" />
+
+        <RadioButton
+            android:id="@+id/update_assessment_performance_assessment_entry"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/performance_assessment" />
+    </RadioGroup>
+
+    <TextView
+        android:id="@+id/update_assessment_type_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/update_assessment_type_group"
+        android:layout_centerHorizontal="true"
+        android:text="@string/assessment_type" />
+
+
+</RelativeLayout>
