--- a/app/src/main/res/layout/activity_add_new_course.xml
+++ b/app/src/main/res/layout/activity_add_new_course.xml
@@ -1,9 +1,160 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".view.AddNewCourse">
 
-</android.support.constraint.ConstraintLayout>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent" android:layout_height="fill_parent"
+    android:scrollbars="vertical">
+
+    <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="1000dp">
+
+            <TextView
+                android:id="@+id/add_course_title"
+                style="@style/Text.Title"
+                android:layout_width="380dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:text="@string/add_new_course" />
+
+            <EditText
+                android:id="@+id/add_course_name_entry"
+                android:layout_width="270dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/add_course_title"
+                android:layout_centerHorizontal="true"
+                android:ems="10"
+                android:hint="@string/course_name"
+                android:inputType="text" />
+
+            <EditText
+                android:id="@+id/add_course_start_date_entry"
+                android:layout_width="270dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/add_course_name_entry"
+                android:layout_centerHorizontal="true"
+                android:clickable="true"
+                android:focusable="true"
+                android:ems="10"
+                android:hint="@string/start_date"
+                android:inputType="date" />
+
+            <Switch
+                android:id="@+id/add_course_end_date_toggle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/add_course_start_date_toggle"
+                android:layout_centerHorizontal="true"
+                android:text="@string/set_end_date_reminder" />
+
+            <EditText
+                android:id="@+id/add_course_end_date_entry"
+                android:layout_width="270dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/add_course_start_date_entry"
+                android:layout_centerHorizontal="true"
+                android:clickable="true"
+                android:focusable="true"
+                android:ems="10"
+                android:hint="@string/end_date"
+                android:inputType="date" />
+
+            <Switch
+                android:id="@+id/add_course_start_date_toggle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="222dp"
+                android:text="@string/set_start_date_reminder" />
+
+            <TextView
+                android:id="@+id/add_course_course_status_label"
+                style="@style/Text.Item"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/add_course_end_date_toggle"
+                android:layout_centerHorizontal="true"
+                android:text="@string/course_status" />
+
+            <RadioGroup
+                android:id="@+id/add_course_course_status_radio_group"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/add_course_course_status_label"
+                android:layout_centerHorizontal="true" >
+
+                <RadioButton
+                    android:id="@+id/add_course_planned_status"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/planned" />
+
+                <RadioButton
+                    android:id="@+id/add_course_in_progress_status"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/in_progress" />
+
+                <RadioButton
+                    android:id="@+id/add_course_completed_status"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/completed" />
+            </RadioGroup>
+
+            <TextView
+                android:id="@+id/add_course_course_mentor_label"
+                style="@style/Text.Item"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/add_course_course_status_radio_group"
+                android:layout_centerHorizontal="true"
+                android:text="@string/course_mentor" />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/add_course_course_mentor_recycler_view"
+                android:layout_width="259dp"
+                android:layout_height="168dp"
+                android:layout_below="@+id/add_course_course_mentor_label"
+                android:layout_centerHorizontal="true" />
+
+            <TextView
+                android:id="@+id/add_course_course_assessments_label"
+                style="@style/Text.Item"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/add_course_course_mentor_recycler_view"
+                android:layout_centerHorizontal="true"
+                android:text="@string/assessments" />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/add_course_course_assessments_recycler_view"
+                android:layout_width="259dp"
+                android:layout_height="168dp"
+                android:layout_below="@+id/add_course_course_assessments_label"
+                android:layout_centerHorizontal="true" />
+
+            <Button
+                android:id="@+id/add_course_save_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="66dp"
+                android:text="@string/save" />
+
+        </RelativeLayout>
+
+
+    </HorizontalScrollView>
+
+</ScrollView>
