--- a/app/src/main/res/layout/activity_mentor_detail.xml
+++ b/app/src/main/res/layout/activity_mentor_detail.xml
@@ -7,6 +7,73 @@
     tools:context=".view.MentorDetailActivity"
     >
 
+    <TextView
+        android:id="@+id/mentor_detail_mentor_name"
+        style="@style/Text.Title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="22dp"
+        android:text="@string/mentor_name" />
+
+    <TextView
+        android:id="@+id/mentor_detail_phone_number_label"
+        style="@style/Text.Title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="131dp"
+        android:text="@string/phone_number" />
+
+    <TextView
+        android:id="@+id/mentor_detail_phone_number"
+        style="@style/Text.Item"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/mentor_detail_phone_number_label"
+        android:layout_centerHorizontal="true"
+        android:text="@string/phone_number" />
+
+    <TextView
+        android:id="@+id/mentor_detail_email_label"
+        style="@style/Text.Title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="220dp"
+        android:text="@string/e_mail" />
+
+    <TextView
+        android:id="@+id/mentor_detail_email"
+        style="@style/Text.Item"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/mentor_detail_email_label"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="-220dp"
+        android:text="@string/e_mail" />
+
+    <Button
+        android:id="@+id/mentor_detail_edit_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="87dp"
+        android:text="@string/edit" />
+
+    <Button
+        android:id="@+id/mentor_detail_home_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="28dp"
+        android:text="@string/home" />
+
 
 
 </RelativeLayout>
