--- a/app/src/main/res/layout/item_mentor.xml
+++ b/app/src/main/res/layout/item_mentor.xml
@@ -6,7 +6,9 @@
     android:layout_width="match_parent"
     android:id="@+id/mentor_item"
     android:layout_height="wrap_content"
-    android:background="@color/colorAccent">
+    android:background="@color/colorAccent"
+    android:clickable="true"
+    android:focusable="true">
 
     <TextView
         android:id="@+id/mentor_title"
