--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="colorSecondAccent">#e67e22</color>
     <color name="colorPrimaryLight">#95a5a6</color>
     <color name="colorBackground">#ecf0f1</color>
+    <color name="black">#000</color>
 
 
 </resources>
