--- a/app/src/main/res/layout/activity_assessment_detail.xml
+++ b/app/src/main/res/layout/activity_assessment_detail.xml
@@ -21,9 +21,8 @@
         style="@style/Text.Title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_below="@+id/assessment_detail_assessment_name"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="131dp"
         android:text="@string/assessment_type" />
 
     <TextView
@@ -40,9 +39,8 @@
         style="@style/Text.Title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/assessment_detail_assessment_type"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="220dp"
         android:text="@string/assessment_due_date" />
 
     <TextView
@@ -52,16 +50,32 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/assessment_detail_assessment_due_date_label"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="-220dp"
         android:text="@string/assessment_due_date" />
+
+    <TextView
+        android:id="@+id/assessment_detail_assessment_course_label"
+        style="@style/Text.Title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/assessment_detail_assessment_due_date"
+        android:layout_centerHorizontal="true"
+        android:text="@string/course_name" />
+
+    <TextView
+        android:id="@+id/assessment_detail_assessment_course"
+        style="@style/Text.Item"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/assessment_detail_assessment_course_label"
+        android:layout_centerHorizontal="true"
+        android:text="@string/course_name" />
 
     <Button
         android:id="@+id/assessment_detail_edit_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_above="@+id/assessment_detail_home_button"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="87dp"
         android:text="@string/edit" />
 
     <Button
@@ -70,6 +84,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="28dp"
+        android:layout_marginBottom="22dp"
         android:text="@string/home" />
 </RelativeLayout>
