--- a/app/src/main/res/layout/activity_mentor_detail.xml
+++ b/app/src/main/res/layout/activity_mentor_detail.xml
@@ -22,9 +22,8 @@
         style="@style/Text.Title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_below="@+id/mentor_detail_mentor_name"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="131dp"
         android:text="@string/phone_number" />
 
     <TextView
@@ -41,9 +40,8 @@
         style="@style/Text.Title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/mentor_detail_phone_number"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="220dp"
         android:text="@string/e_mail" />
 
     <TextView
@@ -53,8 +51,25 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/mentor_detail_email_label"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="-220dp"
         android:text="@string/e_mail" />
+
+    <TextView
+        android:id="@+id/mentor_detail_course_label"
+        style="@style/Text.Title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/mentor_detail_email"
+        android:layout_centerHorizontal="true"
+        android:text="@string/course_name" />
+
+    <TextView
+        android:id="@+id/mentor_detail_course"
+        style="@style/Text.Item"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/mentor_detail_course_label"
+        android:layout_centerHorizontal="true"
+        android:text="@string/course_name" />
 
     <Button
         android:id="@+id/mentor_detail_edit_button"
