--- a/app/src/main/res/layout/activity_mentor_detail.xml
+++ b/app/src/main/res/layout/activity_mentor_detail.xml
@@ -62,22 +62,12 @@
         android:layout_centerHorizontal="true"
         android:text="@string/course_name" />
 
-    <TextView
-        android:id="@+id/mentor_detail_course"
-        style="@style/Text.Item"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/mentor_detail_course_label"
-        android:layout_centerHorizontal="true"
-        android:text="@string/course_name" />
-
     <Button
         android:id="@+id/mentor_detail_edit_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_above="@+id/mentor_detail_home_button"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="87dp"
         android:text="@string/edit" />
 
     <Button
@@ -86,9 +76,14 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="28dp"
         android:text="@string/home" />
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/mentor_detail_course_recycler_view"
+        android:layout_width="271dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/mentor_detail_course_label"
+        android:layout_centerHorizontal="true" />
 
 
 </RelativeLayout>
