--- a/app/src/main/res/layout/activity_update_term.xml
+++ b/app/src/main/res/layout/activity_update_term.xml
@@ -1,9 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.UpdateTermActivity">
 
-</android.support.constraint.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/update_term_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="28dp"
+        style="@style/Text.Title"
+        android:text="@string/update_term" />
+
+    <EditText
+        android:id="@+id/update_term_term_number_entry"
+        android:layout_width="271dp"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/update_term_term_start_date_entry"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginStart="57dp"
+        android:layout_marginLeft="57dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:hint="@string/term_number" />
+
+    <EditText
+        android:id="@+id/update_term_term_start_date_entry"
+        android:layout_width="270dp"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/update_term_term_end_date_entry"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginBottom="-229dp"
+        android:layout_marginStart="57dp"
+        android:layout_marginLeft="57dp"
+        android:hint="@string/start_date"
+        android:ems="10"
+        android:inputType="date" />
+
+    <EditText
+        android:id="@+id/update_term_term_end_date_entry"
+        android:layout_width="270dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="57dp"
+        android:layout_marginLeft="57dp"
+        android:layout_marginTop="229dp"
+        android:ems="10"
+        android:hint="@string/end_date"
+        android:inputType="date" />
+
+    <Button
+        android:id="@+id/update_term_save_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/update_term_delete_button"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:text="@string/update_term" />
+
+    <Button
+        android:id="@+id/update_term_delete_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:text="@string/delete_term" />
+
+
+</RelativeLayout>
