--- a/app/src/main/res/layout/item_term.xml
+++ b/app/src/main/res/layout/item_term.xml
@@ -5,17 +5,18 @@
     android:id="@+id/root_list_term_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/customborder"
+    android:background="@color/colorAccent"
     android:orientation="vertical">
 
 
-    <TextView
-        android:id="@+id/term_title"
-        style="@style/Text.Title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:text="@string/term_number" />
+        <TextView
+            android:id="@+id/term_title"
+            style="@style/Text.Title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+
+            android:text="@string/term_number" />
 
     <TextView
         android:id="@+id/term_start_date"
@@ -26,12 +27,18 @@
 
 
     <TextView
-        android:id="@+id/term_end_date"
+            android:id="@+id/term_end_date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:text="@string/end_date_term_end"
+            android:paddingBottom="10dp"/>
+
+    <View
+        android:id="@+id/divider"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:text="@string/end_date_term_end"
-        android:paddingBottom="10dp"/>
+        android:layout_height="1dp"
+        android:background="?android:attr/listDivider" />
 
 
 </LinearLayout>
