--- a/app/src/main/res/layout-land/activity_add_new_assessment.xml
+++ b/app/src/main/res/layout-land/activity_add_new_assessment.xml
@@ -19,9 +19,8 @@
         android:id="@+id/add_assessment_name_entry"
         android:layout_width="271dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_below="@+id/add_assessment_title"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"
         android:ems="10"
         android:hint="@string/assessment_name"
         android:inputType="text" />
@@ -30,8 +29,11 @@
         android:id="@+id/add_assessment_due_date_entry"
         android:layout_width="270dp"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/add_assessment_due_date_notification_switch"
-        android:layout_centerHorizontal="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/add_assessment_name_entry"
+        android:layout_marginEnd="12dp"
+        android:layout_marginRight="12dp"
         android:clickable="true"
         android:ems="10"
         android:focusable="true"
@@ -52,9 +54,12 @@
         android:id="@+id/add_assessment_type_group"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="207dp">
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="58dp"
+        android:layout_marginLeft="58dp">
+
 
         <RadioButton
             android:id="@+id/add_assessment_pre_assessment_entry"
@@ -90,9 +95,11 @@
         android:id="@+id/add_assessment_type_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/add_assessment_type_group"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="-207dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/add_assessment_name_entry"
+        android:layout_marginStart="97dp"
+        android:layout_marginLeft="97dp"
         android:text="@string/assessment_type" />
 
     <Spinner
@@ -110,9 +117,9 @@
         android:id="@+id/add_assessment_due_date_notification_switch"
         android:layout_width="176dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="166dp"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="46dp"
         android:text="@string/set_assessment_due_date_notification" />
 
 </RelativeLayout>
