--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -8,19 +8,21 @@
     android:background="#FFF">
 
     <TextView
+        style="@style/Text.Title"
         android:layout_width="wrap_content"
         android:layout_height="59dp"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="189dp"
-        style="@style/Text.Title"
+        android:layout_marginBottom="45dp"
         android:text="@string/app_name" />
 
     <Button
         android:id="@+id/enter_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="113dp"
         android:text="@string/enter" />
 
     <ImageView
