--- a/app/src/main/res/layout-land/activity_update_term.xml
+++ b/app/src/main/res/layout-land/activity_update_term.xml
@@ -21,43 +21,37 @@
         android:id="@+id/update_term_term_number_entry"
         android:layout_width="271dp"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/update_term_term_start_date_entry"
         android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginStart="57dp"
-        android:layout_marginLeft="57dp"
+        android:layout_below="@+id/update_term_title"
+        android:layout_marginStart="148dp"
         android:ems="10"
-        android:inputType="textPersonName"
         android:hint="@string/term_number"
-        tools:ignore="TextFields" />
+        android:inputType="textPersonName"
+        tools:ignore="TextFields"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="148dp" />
 
     <EditText
         android:id="@+id/update_term_term_start_date_entry"
         android:layout_width="270dp"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/update_term_term_end_date_entry"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginBottom="-229dp"
-        android:layout_marginStart="57dp"
-        android:layout_marginLeft="57dp"
-        android:hint="@string/start_date"
+        android:layout_alignStart="@+id/update_term_term_number_entry"
+        android:layout_below="@+id/update_term_term_number_entry"
         android:ems="10"
-        android:inputType="date" />
+        android:hint="@string/start_date"
+        android:inputType="date"
+        android:layout_alignLeft="@+id/update_term_term_number_entry" />
 
     <EditText
         android:id="@+id/update_term_term_end_date_entry"
         android:layout_width="270dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="57dp"
-        android:layout_marginLeft="57dp"
-        android:layout_marginTop="229dp"
+        android:layout_alignStart="@+id/update_term_term_number_entry"
+        android:layout_below="@+id/update_term_term_start_date_entry"
         android:ems="10"
         android:hint="@string/end_date"
-        android:inputType="date" />
+        android:inputType="date"
+        android:layout_alignLeft="@+id/update_term_term_number_entry" />
 
     <Button
         android:id="@+id/update_term_save_button"
