--- a/app/src/main/res/layout/item_mentor.xml
+++ b/app/src/main/res/layout/item_mentor.xml
@@ -19,6 +19,7 @@
         android:gravity="center_horizontal"
         android:text="@string/mentor_name"
         tools:layout_editor_absoluteX="127dp"
-        tools:layout_editor_absoluteY="0dp" />
+        tools:layout_editor_absoluteY="0dp"
+        tools:ignore="MissingConstraints" />
 
 </android.support.constraint.ConstraintLayout>
